apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: jay
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
