apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: jay
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: home.jay-gemini.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 3000
